# sovereign-sdk

./: .dockerignore  .env  .gitignore  Cargo.toml  Makefile  README.md  Releases.md  ci_prover_count_check.sh  ci_rollup_count_check.sh  constants.json  constants.test.json  constants.toml  deny.toml  packages_to_publish.txt  packages_to_publish.yml  queries.json  rust-toolchain.toml  script.sh  slots.json
adapters/avail/: Cargo.toml  README.md
adapters/avail/src/: avail.rs  lib.rs  service.rs  verifier.rs
adapters/celestia/: Cargo.toml  README.md
adapters/celestia/src/: celestia.rs  da_service.rs  header_response.json  lib.rs  pfb.rs  share_commit.rs  shares.rs  types.rs  utils.rs
adapters/celestia/test_data/: header_response.json
adapters/mock-da/: Cargo.toml  README.md
adapters/mock-da/src/: lib.rs  service.rs  validity_condition.rs  verifier.rs
adapters/mock-zkvm/: Cargo.toml  README.md
adapters/mock-zkvm/src/: lib.rs
adapters/risc0/: Cargo.toml  README.md
adapters/risc0/src/: guest.rs  host.rs  lib.rs  metrics.rs
adapters/risc0/tests/: native.rs
block-explorer/backend/: Cargo.toml  Dockerfile
block-explorer/backend/compose/: demo-rollup.yml
block-explorer/backend/migrations/: 20230926211604_events.sql  20231002090401_batches.sql
block-explorer/backend/proptest-regressions/: utils.txt
block-explorer/backend/src/: db.rs  indexer.rs  lib.rs  main.rs  metrics.rs  utils.rs
block-explorer/backend/tests/: requests.rs
db/schemadb/: Cargo.toml
db/schemadb/src/: db_test.rs  iterator.rs  iterator_test.rs  lib.rs
db/sovereign-db/: Cargo.toml
db/sovereign-db/src/: ledger_db.rs  lib.rs  rocks_db_config.rs  state_db.rs
demo-app/: Cargo.toml
demo-app/src/: app.rs  batch.rs  config.rs  data_generation.rs  helpers.rs  lib.rs  main.rs  runtime.rs  sft.rs  stf.rs  test_utils.rs  tests.rs  tx_hooks.rs  tx_hooks_impl.rs  tx_revert_tests.rs  tx_verifier.rs  tx_verifier_impl.rs  types.rs
demo-app/src/bank_cmd/: README.md  main.rs
demo-app/src/data_generation/: election_data.rs  mod.rs  value_setter_data.rs
examples/avail-helper/: Cargo.toml
examples/demo-nft-module/: Cargo.toml  README.md  queries.md
examples/demo-nft-module/src/: call.rs  genesis.rs  lib.rs  offchain.rs  query.rs  utils.rs
examples/demo-nft-module/tests/: nft_test.rs
examples/demo-prover/: Cargo.toml  Makefile  README.md  build.rs  ide_setup.md  rust-toolchain.toml
examples/demo-prover-avail/: Cargo.toml  README.md
examples/demo-prover-avail/host/: Cargo.toml  Dockerfile  Makefile  entrypoint.sh  rollup_config.toml
examples/demo-prover/benches/: README.md  blocks.hex  prover_bench.rs
examples/demo-prover/host/: Cargo.toml  rollup_config.toml
examples/demo-prover/methods/: Cargo.toml  build.rs
examples/demo-prover/src/: main.rs
examples/demo-rollup/: .gitignore  Cargo.toml  Makefile  README.md  README_CELESTIA.md  README_MOCK_DA.md  celestia_rollup_config.toml  localsetup.md  mock_rollup_config.toml  remote_setup.md  rollup_config.toml  rust-toolchain.toml  submitting_1.sh  submitting_2.sh
examples/demo-rollup-avail/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  rollup_config.toml
examples/demo-rollup-avail/src/: config.rs  ledger_rpc.rs  main.rs  test_rpc.rs  txs_rpc.rs
examples/demo-rollup/benches/: Makefile  README.md  data_gen.rs  mine.txt.sorted  rng_xfers.rs  rollup.rs  rollup_bench.rs  rollup_coarse_measure.rs  rollup_config.toml  test_helper.rs
examples/demo-rollup/proptest-regressions/: test_rpc.txt
examples/demo-rollup/provers/: Cargo.toml
examples/demo-rollup/src/: celestia_rollup.rs  common.rs  config.rs  data_gen.rs  eth.rs  ledger_rpc.rs  lib.rs  main.rs  main_2.rs  mock_rollup.rs  register_rpc.rs  rng_xfers.rs  rollup.rs  test_rpc.rs  txs_rpc.rs  verifier.rs
examples/demo-rollup/stf/: Cargo.toml  README.md
examples/demo-rollup/tests/: all_tests.rs  bank.rs  bank_integration_tests.rs  evm_integration_tests.rs  module_system_integration_tests.rs  rollup_test.rs  test_helpers.rs
examples/demo-simple-stf/: Cargo.toml  README.md
examples/demo-simple-stf/src/: lib.rs
examples/demo-simple-stf/tests/: stf_test.rs
examples/demo-stf/: .gitignore  Cargo.toml  README.md  exp.rs  exp2.rs
examples/demo-stf/src/: app.rs  batch_builder.rs  cli.rs  config.rs  genesis_config.rs  helpers.rs  hooks_impl.rs  lib.rs  mocks.rs  runner_config.rs  runtime.rs  tests.rs  (+3 more)
examples/expose_rpc_debug/: Cargo.toml
examples/simple-nft-module/: Cargo.toml  README.md
full-node/sov-ethereum/: Cargo.toml  README.md
full-node/sov-ledger-rpc/: Cargo.toml
full-node/sov-prover-storage-manager/: Cargo.toml  README.md
full-node/sov-sequencer/: Cargo.toml  README.md
full-node/sov-stf-runner/: Cargo.toml  README.md
fuzz/: Cargo.toml  Makefile  README.md
fuzz/artifacts/: crash-03ff9dbf9c64fb7c125f0aec0b8b80a972907eb8  crash-1261a81d957460d69943ae02e30528372736fc15  crash-1f039bacf8f860eb5507d9ee3a9879dfe316cf5e  crash-44796f5e67307b5b18e648fdd016e885ebf50da9  crash-5e665cf3759c0aabfc3e898f6294840582421b32  crash-6929e000e5891085cf17a75de96dd505b6499083  crash-816595d1445fb45b609cca5417ba5f537c74ab43  crash-98daf6c68def387cffda2937a318cdfd9e956627  crash-b4a051390ba551b5349b6f233930f32f9e16bd85  crash-e5f45f193d720ae7264383fcc0763cd945120fc1  slow-unit-727720324b031a1f6408810b07628b558866fb00  slow-unit-a5b5c4ac13d3d8cbc8b4696cb715160998407a8f
fuzz/fuzz_targets/: accounts_call.rs  accounts_call_random.rs  accounts_parse_call_message.rs  address_bech_32_parse_serde.rs  address_bech_32_try_from_bytes.rs  bank_call.rs  bank_parse_call_message.rs  namespace_group_from_b64.rs  parse_address.rs  share_deserialize.rs
jmt/: Cargo.toml  NOTICE  README.md
jmt/src/: db.rs  errors.rs  hash.rs  jellyfish_merkle_test.rs  lib.rs  mock_tree_store.rs  parallel.rs  proof.rs  read_write.rs  test_helper.rs
module-system/module-schemas/: Cargo.toml  README.md  build.rs
rollup-interface/: Cargo.toml  Makefile  README.md
rollup-interface/specs/: overview.md
rollup-interface/src/: lib.rs
sdk/: Cargo.toml
sdk/specs/: overview.md
sdk/src/: lib.rs
(+1294 files in other folders)
