[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
sovereign-sdk = { path = "../sdk", features = ["mocks"] }
election = { path = "../sov-modules/sov-modules-impl/examples/election" }
sequencer = { path = "../sov-modules/sov-modules-impl/sequencer" }
bank = { path = "../sov-modules/sov-modules-impl/bank" } 
sov-app-template = { path = "../sov-modules/sov-app-template" }
value-setter = { path = "../sov-modules/sov-modules-impl/examples/value-setter" }
accounts = { path = "../sov-modules/sov-modules-impl/accounts" }
sov-state = { path = "../sov-modules/sov-state", features = ["temp"] }
sovereign-db = { path = "../db/sovereign-db" }
sov-modules-api = { path = "../sov-modules/sov-modules-api"}
sov-modules-macros = { path = "../sov-modules/sov-modules-macros" }
borsh = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
schemadb = { path = "../db/schemadb", features = ["temppath"] }
