[package]
name = "sovereign-sdk-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# Sovereign-maintained dependencies.
jupiter = { path = "../adapters/celestia" }

# Prevent this from interfering with workspaces.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_namespace_group_from_b64"
path = "fuzz_targets/fuzz_namespace_group_from_b64.rs"
test = false
doc = false
