[package]
name = "jellyfish-merkle-generic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

# Dependencies for "metrics" feature
prometheus = { workspace = true, default-features = false, optional = true }
once_cell = { workspace = true, optional = true }

# Dependencies for "fuzzing" feature. Also relies on "metrics" and "borsh"
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rand = { workspace = true, features = ["min_const_gen"], optional = true}
tiny-keccak = { workspace = true, features = ["keccak", "sha3"], optional = true }

# Dependencies for "rayon" feature
rayon = { workspace = true, optional = true }

# Dependencies for "borsh" feature
borsh = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = { version = "0.8", features = ["min_const_gen"] }
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
prometheus = { version = "0.13.3", default-features = false }
once_cell = "1.10.0" 
rayon =  "1.5.2"
borsh = { workspace = true }

[features]
default = []
fuzzing = ["borsh", "dep:proptest", "dep:proptest-derive", "dep:rand", "dep:tiny-keccak"]
metrics = ["dep:prometheus", "dep:once_cell"]
rayon = ["dep:rayon", "dep:once_cell"]
borsh = ["dep:borsh"]
