[package]
name = "sov-rollup-interface"
description = "Defines interfaces for building rollups with the Sovereign SDK"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true, features = ["rc"]}
serde = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true, features = ["serde"] }

sha2 = { workspace = true }
tendermint = "0.32"

anyhow = { workspace = true }
thiserror = { workspace = true }

# Proptest should be a dev-dependency, but those can't be optional
proptest =  { workspace = true, optional = true } 

[dev-dependencies]
serde_json = "1"

[features]
default = []
fuzzing = ["proptest"]
mocks = []
