[package]
name = "sov-rollup-interface"
description = "Defines interfaces for building rollups with the Sovereign SDK"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"
exclude = [
    "specs/assets/*",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true, features = ["serde"] }
digest = { workspace = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true }

# TODO: Replace with serde-compatible borsh implementation when it becomes availabile 
#    see https://github.com/Sovereign-Labs/sovereign-sdk/issues/215
bincode = { workspace = true }

anyhow = { workspace = true }

# Proptest should be a dev-dependency, but those can't be optional
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

tokio = { workspace = true, optional = true}


[dev-dependencies]
serde_json = "1"
proptest = { workspace = true }
proptest-derive = { workspace = true }

[features]
default = []
native = ["tokio"]
fuzzing = ["proptest", "proptest-derive", "sha2"]
mocks = ["sha2", "bytes/serde", "tokio"]
