[package]
name = "sovereign-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true, features = ["rc"]}
bytes = { workspace = true }
jmt = { workspace = true }
sha2 = { workspace = true }
first-read-last-write-cache = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

# Proptest should be a dev-dependency, but those can't be optional
proptest =  { workspace = true, optional = true } 

[features]
default = []
fuzzing = ["proptest", "mocks"]
mocks = []
