[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
sov-rollup-interface = { path = "../../rollup-interface" }

tokio = { version = "1", features = ["full"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }

anyhow = "1.0"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

subxt = "0.27.1"
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.6.0" }

reqwest = { version = "0.11", features = ["json"] }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

thiserror = "1.0.38"
sp-core = "21.0.0"

[features]
default = ["native"]
native = []
verifier = []
