[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
sov-rollup-interface = { path = "../../rollup-interface" }

tokio = { version = "1", features = ["full"], optional = true }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }

anyhow = "1.0"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
subxt = { version = "0.27.1", optional = true }
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.6.0", features = ["std"], optional = true }

reqwest = { version = "0.11", features = ["json"], optional = true }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"], optional = true }

thiserror = "1.0.38"
bytes = { version = "1.2.1", features = ["serde"]}
sp-core = { version = "21.0.0", optional = true }
primitive-types = { version = "0.12.1", features = ["serde"]}

[features]
default = ["native"]
native = ["dep:tokio", "dep:codec", "dep:reqwest", "dep:avail-subxt", "dep:subxt", "dep:sp-core"]
verifier = []
