[package]
name = "sov-avail-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true, features = ["bytes"] }
sov-rollup-interface = { path = "../../rollup-interface" }
bytes = { version = "1.2.1", features = ["serde"] }
primitive-types = { version = "0.12.2", features = ["serde"] }
sp-core-hashing = "16.0.0"
subxt = { version = "0.29", optional = true }
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.6.3", features = ["std"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"], optional = true }

# Convenience
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
thiserror = { workspace = true }
sp-keyring = { version = "24", optional = true }
sp-core = { version = "21", optional = true }
hex = { workspace = true }

[features]
default = ["native"]
native = [
    "dep:tokio",
    "dep:codec",
    "dep:reqwest",
    "dep:avail-subxt",
    "dep:subxt",
    "dep:futures",
    "dep:pin-project",
    "dep:sp-keyring",
    "dep:sp-core",
    "sov-rollup-interface/native"
]
