[package]
name = "jupiter"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true, features = ["bytes"] }
bech32 = { workspace = true }
prost = "0.11"
prost-types = "0.11"
tendermint = "0.32"
tendermint-proto = "0.32"

# Convenience
async-trait = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
base64 = "0.21.2"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
jsonrpsee = { version = "0.16.2", features = ["http-client"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zk-cycle-utils = {path = "../../zk-cycle-utils", optional=true}
risc0-zkvm = { version = "0.16", default-features = false, features = ["std"], optional=true}
risc0-zkvm-platform = { version = "0.16", optional=true}

sov-rollup-interface = { path = "../../rollup-interface" }
nmt-rs = { git = "https://github.com/Sovereign-Labs/nmt-rs.git", rev = "dd37588444fca72825d11fe4a46838f66525c49f", features = ["serde", "borsh"] }


[dev-dependencies]
postcard = { version = "1", features = ["use-std"] }
proptest = { version = "1.2" }
wiremock = "0.5"


[build-dependencies]
prost-build = { version = "0.11" }

[features]
default = ["native"]
native = ["dep:tokio", "dep:jsonrpsee"]
bench = ["zk-cycle-utils/bench","risc0-zkvm","risc0-zkvm-platform"]
verifier = []
