[package]
name = "sov-celestia-adapter"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true, features = ["bytes"] }
bech32 = { workspace = true }
prost = "0.11"
prost-types = "0.11"
# I keep this commented as a reminder to opportunity to optimze this crate for non native compilation
#tendermint = { version = "0.32", default-features = false, features = ["std"] }
tendermint = "0.32"
tendermint-proto = "0.32"

# Convenience
async-trait = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
base64 = "0.21.2"
hex = { workspace = true, features = ["serde"] }
hex-literal = "0.4.1"
jsonrpsee = { workspace = true, features = ["http-client"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sov-zk-cycle-macros = { path = "../../utils/zk-cycle-macros", optional = true }
risc0-zkvm = { version = "0.16", default-features = false, features = ["std"], optional = true }
risc0-zkvm-platform = { version = "0.16", optional = true }

sov-rollup-interface = { path = "../../rollup-interface" }
nmt-rs = { git = "https://github.com/Sovereign-Labs/nmt-rs.git", rev = "dd37588444fca72825d11fe4a46838f66525c49f", features = ["serde", "borsh"] }


[dev-dependencies]
postcard = { version = "1", features = ["use-std"] }
proptest = { version = "1.2" }
wiremock = "0.5"


[build-dependencies]
prost-build = { version = "0.11" }

[features]
default = []
native = ["dep:tokio", "dep:jsonrpsee", "dep:serde_json", "tendermint/default", "sov-rollup-interface/native"]
bench = ["sov-zk-cycle-macros/bench", "risc0-zkvm", "risc0-zkvm-platform"]
verifier = []
